--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "lodash": "^4.17.21"
   }
 }
